# ios-signing-test

./: DEPLOYMENT-GUIDE.md  Entitlements.plist  LAUNCH-INSTRUCTIONS.md  QT6-DEPLOYMENT.md  README.md  SETUP-GHA.md  SIGNING-DETAILS.md  app.mobileprovision  auto-deploy.sh  deploy-and-monitor.sh  deploy-automated.sh  deploy-qt6-auto.sh  export-cert.sh  full-deploy-cycle.sh  setup-gh-secrets.sh  test-qt6-app.sh  wifi-deploy.sh
.github/workflows/: README.md  ios-build-sign.yml
app/: main.c
app/SampleApp.app/: Info.plist  SampleApp
app/SampleApp.app/_CodeSignature/: CodeResources
audits/: qt6-cmake-app.md
ios-app/: main.m
output/: SampleApp.ipa
qt-app/: CMakeLists.txt  Info.plist  main.cpp  main.qml
qt6-cmake-app/: CMakeLists.txt
qt6-cmake-app/qml/: Main.qml
qt6-cmake-app/src/: main.cpp
scripts/: create-ipa.sh  fix-p12-format.sh  prepare-for-ci.sh  sign-ios-app.sh
scripts/legacy/: sign-ios-app-simple.sh  sign-ios-app.sh  sign-with-chain.sh  sign-with-login-keychain.sh
